WiseUpTi-SalesForce/Wise Up Sales Force/src/objects/Article__c.object
<CustomObject>
    <fields>
        <fullName>Clause__c</fullName>
        <label>Clause</label>
        <picklist>
            <picklistValues>
                <fullName>Franquia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matrícula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mensalidade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferência</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescisão</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vigência</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Parágrafo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Description__c</columns>
        <columns>Clause__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Article Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parágrafos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>